welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: value message
message match {
^BDR2:18: error: not found: value message
message = litMessage();
^